tests/negative/optimizer/array-out-of-bounds.orng
fn main() -> Int {
    let x: [4]Int
    x[100]
}